# magic

./: Cargo.toml
src/: main.rs
