[package]
name = "my-project"
version = "0.1.0"
authors = ["runner"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.16", features = ["json"]}
tokio = {version="1", features = ["full"]}
serde_json = "1"
sfml = "0.20.0"
tauri = "1.2.4"